# rss2html

./: .gitignore  Makefile  README.md  README.txt  actions.py  actions_pool.py  cached_requests.py  default_settings.py  feed.py  feed_parser.py  icon_searcher.py  locale_gettext.py  logging.conf  onclick.css  onclick2.css  pyproject.toml  requirements.txt  rss2html.service.template  rss2html_ssh.sh.example  rss_reader  rss_reader.desktop  rss_server.py  rss_server.service.template  session.py  settings_helper.py  setup.cfg  start_on_linux.sh  start_on_windows.bat  start_on_windows.py  static_content.py  subscribe.css  templates.py  validators.py
css/: dark.css  default.css  onclick2.css  subscribe.css
locale/: babel.config
locale/de_DE/LC_MESSAGES/: messages.mo  messages.po
locale/en_US/LC_MESSAGES/: messages.mo  messages.po
rss_server-page/css/: dark.css  default.css  light.css  onclick.css  onclick2.css  onclick3.css  onclick3_actions.css  onclick_actions.css
rss_server-page/js/: handle_action.js
rss_server-page/less/: base.less  dark.less  extras.less  light.less  plugin_css_invert.js
screenshots/: README.md
scripts/: install_ssh.sh  rss2html_ssh.sh.example  rss_reader
src/rss2html/: __main__.py  actions.py  actions_pool.py  cached_requests.py  default_settings.py  downloader.py  feed.py  feed_parser.py  httpcompressionserver.py  icon_searcher.py  rss_server.py  session.py  settings_helper.py  static_content.py  templates.py  validators.py  win_find_prog_for_mimetype.py  wordbreaker.py
src/rss2html/locale/: babel.config
src/rss2html/locale/de_DE/LC_MESSAGES/: messages.mo  messages.po
src/rss2html/locale/en_US/LC_MESSAGES/: messages.mo  messages.po
src/rss2html/rss_server-page/css/: default.css  light.css  multidrop.css  onclick3.css  onclick3_actions.css
src/rss2html/rss_server-page/icons/: browserconfig.xml
src/rss2html/rss_server-page/js/: handle_action.js  multidrop.js
src/rss2html/rss_server-page/less/: base.less  extras.less  light.less  plugin_css_invert.py
src/rss2html/rss_server-page/modules/multidrop/css/: multidrop.css
src/rss2html/rss_server-page/modules/multidrop/js/: multidrop.js
src/rss2html/templates/: base.html  feed.html  index.html  login.html  macros.html
src/rss2html/templates/extras/: extras.html
templates/: action_icons.css  base.html  feed.html  index.html  login.html  macros.html  message.html  message_minimal.html
