[tool.poetry]
name = "rss2html"
version = "1.2"
description = "Html renderer for RSS 2.0 feeds"
authors = ["Olaf Schulz <olaf_schulz+rss2html@posteo.de>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
Jinja2 = "^3.0"
httplib2 = "^0.20.4"
babel = "^2.6"
urllib3 = "^1.26.18"
certifi = "^2024.7.4"
psutil = "^5.9.2"
defusedxml = "^0.7"

[tool.poetry.group.compression.dependencies]
brotli = [
	{ version = '^1.0', markers = "platform_python_implementation == 'CPython'" },
]
brotlicffi = [
	{ version = '^1.0', markers = "platform_python_implementation != 'CPython'" },
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
