[metadata]
name = rss2html
version = 1.0
author = Olaf Schulz
author_email = olaf_schulz@posteo.de
description = Webserver to represent RSS 2.0 feeds as HTML site.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = RSS, feed reader, server
url = https://github.com/YggdrasiI/rss2html
project_urls =
    Bug Tracker = https://github.com/YggdrasiI/rss2html/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNUv3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
  Jinja2>=2.10
  httplib2
  # babel>=2.6
  urllib3
  certifi
  psutil

#include_package_data = True
#package_data = {'rss2html': ['rss_server-page/robots.txt']}

[options.packages.find]
where = src

[options.package_data]
# Recursive option for glob-pattern '**' not enabled here?!
# Addng subfolders by hand...
rss2html = 
  logging.conf
	templates/*
	templates/*/*
	templates/*/*/*
	rss_server-page/*
	rss_server-page/css/*.css
	rss_server-page/js/*.js
	rss_server-page/icons/*
	rss_server-page/icons/*/*
	rss_server-page/icons/*/*/*
	locale/*
	locale/*/LC_MESSAGES/messages/*
